@@ -1,3 +1,7 @@
+2014-11-03  Zhenqiang Chen  <zhenqiang.chen@arm.com>
+
+	* ifcvt.c (noce_try_store_flag_mask): Check rtx cost.
+
 2014-11-03  Andrew Pinski  <apinski@cavium.com>
 
 	* config/mips/mips-cpus.def (octeon3): New cpu.
